# soulxae_agent

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: api.py  config.py  main.py
core/app/: api.py  config.py
core/dependencies/: configure_container.py
core/middleware/: middleware_service.py
database/: sessions.py
dependencies/: configure_container.py  container.py  embedding_service.py  redis_service.py
middleware/: MiddlewareService.py  auth_middleware.py  middleware_service.py
models/: interaction_request.py  models.py
models/db/: example.py  models.py  tool.py
modules/agents/: agent_service.py  agents_models.py  agents_routes.py  create_agent.py  graph.py  state.py
modules/agents/nodes/: appointment_flow.py  classify_intent.py  general_query.py
modules/files/: files_routes.py
modules/messaging/: messaging_service.py
modules/prompts/: prompt_service.py
modules/state/: state_model.py  state_service.py
modules/tools/: agent_handoff.py  appointment_state.py  data_session.py  make_appointment.py  tool_registry.py  tools_models.py  tools_service.py
routes/: files.py  interact.py
services/: PromptService.py  agent_service.py  embedding_service.py  messaging_service.py  prompt_service.py  redis_service.py  tools_service.py
src/: api.py
src/agent/: graph.py  state.py
src/agent/nodes/: agent_handoff.py  appointments.py  classify_intent.py  general_query.py
src/agent/services/: appointments_service.py  embedding_service.py  prompt_service.py
src/api/: api.py  dependencies.py  server.py
src/api/application/use_cases/: store_web_content.py  upload_document.py
src/api/core/middleware/: auth_middleware.py  middleware_service.py
src/api/core/services/: redis_service.py
src/api/domain/: agents_models.py  files_models.py  session_repository.py
src/api/infrastructure/: redis_session_repository.py  webtoken_service.py
src/api/interface/controllers/: agent_controller.py
src/api/interface/middleware/: auth_middleware.py  middleware_service.py
src/api/interface/routes/: agents_routes.py  files_routes.py  knowledge_base_routes.py
src/api/modules/agents/: agent_controller.py  agents_models.py  agents_routes.py
src/api/modules/files/: files_models.py  files_routes.py
src/api/modules/messaging/: messaging_service.py
src/core/database/: sessions.py
src/core/dependencies/: configure_container.py
src/core/middleware/: auth_middleware.py  middleware_service.py
src/dependencies/: configure_container.py
src/modules/agents/: agent_controller.py  agents_models.py  agents_routes.py  create_agent.py  graph.py  state.py
src/modules/agents/nodes/: agent_handoff.py  appointments.py  classify_intent.py  general_query.py
src/modules/files/: files_routes.py
src/modules/messaging/: messaging_service.py
src/modules/prompts/: prompt_service.py
src/shared/dependencies/: configure_container.py  dependencies.py
src/shared/domain/: embedding_service.py  vector_repository.py  web_extraction_service.py
src/shared/infrastructure/: openai_embedding_service.py  qdrant_vector_repository.py  tavily_web_extraction_service.py
src/shared/utils/decorators/: service_error_handler.py
src/utils/decorators/: service_error_handler.py
src/workflows/: dependencies.py  graph.py
src/workflows/application/agents/: appoinments_agent.py  general_query_agent.py  handoff_agent.py  orchestrator_agent.py
src/workflows/application/services/: calendar_service.py  prompt_service.py
src/workflows/application/use_cases/: search_for_context.py
src/workflows/domain/: entities.py  models.py  state.py
src/workflows/domain/services/: llm_service.py
src/workflows/infrastructure/: langchain_llm_service.py
tools/: agent_handoff.py  data_session.py  make_appointment.py  tool_registry.py
