[project]
name = "agent-soulxae"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "boto3==1.38.41",
    "botocore==1.38.41",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.4",
    "dataclasses-json==0.6.7",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docopt==0.6.2",
    "email-validator==2.2.0",
    "executing==2.2.0",
    "faiss-cpu==1.11.0",
    "fastapi==0.115.13",
    "fastapi-cli==0.0.7",
    "fastjsonschema==2.21.1",
    "frozenlist==1.7.0",
    "greenlet==3.2.3",
    "grpcio==1.73.0",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "hyperframe==6.1.0",
    "idna==3.10",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyterlab-pygments==0.3.0",
    "langchain==0.3.26",
    "langchain-community==0.3.26",
    "langchain-core==0.3.68",
    "langchain-openai==0.3.24",
    "langchain-qdrant==0.2.0",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.5.3",
    "langgraph-checkpoint==2.1.0",
    "langgraph-prebuilt==0.5.2",
    "langgraph-sdk==0.1.72",
    "langsmith==0.3.45",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "multidict==6.5.0",
    "mypy-extensions==1.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "numpy==2.3.0",
    "openai==1.88.0",
    "orjson==3.10.18",
    "ormsgpack==1.10.0",
    "packaging==24.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pickleshare==0.7.5",
    "pipreqs==0.5.0",
    "platformdirs==4.3.8",
    "portalocker==2.10.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psycopg2-binary==2.9.10",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.0",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pypdf==5.6.1",
    "pypdf2>=3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "qdrant-client==1.14.3",
    "redis==6.2.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rich-toolkit==0.14.7",
    "rpds-py==0.25.1",
    "s3transfer==0.13.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "tavily-python>=0.7.12",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tinycss2==1.4.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "xxhash==3.5.0",
    "yarg==0.1.9",
    "yarl==1.20.1",
    "zstandard==0.23.0",
]
